bootstrap/jenkins/nodeport.yaml
# Ingress 나 DNS 가 아직 없을 때 노드 IP 로 바로 접속하기 위한 NodePort.
# 사용하려면 kustomization.yaml 의 resources 에서 주석을 해제한다.
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30808
